docs: update README for Aesh/FFM backends, image rendering, and coverage
- Add Aesh and FFM backend badges and descriptions
- Add terminal image rendering section with code examples
- Update module tree to include new backends and image widget
- Update coverage table (97% → 100%/98%/91%/96%)
- Add backend comparison table
- Fix license (MIT, not Apache-2.0)

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>